<resources>
    <string name="app_name">Movie Pocket</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dec_logo_image">Logo Image</string>
    <string name="txt_sign_up_now">New user? <font color='#26a69a'><b>Sign Up</b></font></string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="have_an_account_sign_in_now">Have account? <font color='#26a69a'><b>Sign In</b></font> now.</string>
    <string name="empty_edittext">This field can not be empty</string>
    <string name="password_less_digit_error">Password can\'t be less then 6 digits</string>
    <string name="error_email_format">Email format is not correct</string>
    <string name="password_not_matched">Password does not match</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection_error">No internet connection is found please check your connection.</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone_no">Phone no</string>
    <string name="favorite_movie">Favorite movie</string>
    <string name="detail_activity_movie_poster">detail_activity_movie_poster</string>
    <string name="rate_movie">Rate Movie</string>
    <string name="cast">Cast</string>
    <string name="imbd_rating">Imbd Rating:</string>
    <string name="spoken_language">Spoken Language:</string>
    <string name="duration">Duration:</string>
    <string name="budget">Budget:</string>
    <string name="genre">Genres:</string>
    <string name="revenue">Revenue:</string>
    <string name="release_date">Release Date:</string>
    <string name="production_companies">Production Companies:</string>
    <string name="status">Status</string>
    <string name="cast_image">cast image</string>
    <string name="min_append">min</string>
    <string name="dollar_append">$</string>
    <string name="dialog_Title">Share Your Experience</string>
    <string name="_10">/10</string>
    <string name="people_who_rated_us">People\'s Who Rated This Movie</string>
    <string name="ok">OK</string>
    <string name="notNow">NOT NOW</string>
    <string name="rate_the_movie">Rate The Movie</string>
    <string name="comment">write..</string>
    <string name="desc">ImageButtonSend</string>
    <string name="date">Date</string>
    <string name="cast_info_image">cast info image</string>
    <string name="image_cast_info">image cast info</string>
    <string name="name">Name</string>
    <string name="biography">Biography</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place Of Birth</string>
    <string name="sendemail">SendEmail</string>
    <string name="call">call</string>
    <string name="about_us_my_dec">Hi I\'m Android developer. Developed this app as a project of my Udacity Android Developer Nano Degree Capsonte part 2.</string>
    <string name="linked_in">Linked In</string>
    <string name="muhammad_farhan_bakht">Muhammad Farhan Bakht</string>
    <string name="mfarhan_jp_gmail_com">mfarhan.jp@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="myPhone">(+92)3302882628</string>
    <string name="pakistan">Pakistan</string>
    <string name="zip_code">Zip Code</string>
    <string name="_75290">75290</string>
    <string name="address">Address</string>
    <string name="julstan_e_jauhar_block_6">Julstan-e-Jauhar Block 6</string>
    <string name="comments">Comments</string>
    <string name="unavailable">Unavailable</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_rated">Top Rated</string>
    <string name="about_us">About Us</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_poster_image">widget poster image</string>
    <string name="widget_empty_view_image">widget empty view image</string>
    <string name="widget_rating_10"><font size="9">/10</font></string>
    <string name="cancelf">Cancel</string>
    <string name="send">Send</string>
    <string name="cancel_in_forget_pass">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="there_are_no_favorite_movie_s">There are no favorite movie\'s</string>
    <string name="changes_are_made_successfully">Changes save successfully</string>
    <string name="toast_error_image_url_null">ImageUrl is empty</string>
    <string name="toast_error_uid_is_null">Uid is empty</string>
    <string name="toast_no_data_found">Error no data found</string>
    <string name="toast_user_object_is_null">userObj is null</string>
    <string name="toast_fail_to_upload">Fail to upload</string>
    <string name="please_type_some_comments">Please Type Some Comment</string>
    <string name="select_profile_image">Please select profile image to proceed.</string>
    <string name="error_register_user">Error while Registering User</string>
    <string name="register_ok">Registered Successfully</string>
    <string name="sign_in_successfully">Signed In Successfully</string>
    <string name="error_while_sign_in">Error while Signing In User</string>
    <string name="reset_pass_send">Reset password email has been sent to your email</string>
    <string name="erro_reset_pass">Fail to send reset email</string>
    <string name="no_network_found_sort_change_to_favorite">No Network is found SortBy Changed to Favorite</string>
    <string name="error_unable_to_load_data">Error: unable to load data</string>
    <string name="error_no_app_found_to_handel">Sorry no app found to send email</string>
    <string name="error_no_app_found_to_call">Sorry no app found to call</string>
    <string name="no_network_to_access_profile">No Network is found can\'t access profile</string>
    <string name="widget_logo">widget logo</string>
    <string name="logout">Logout</string>
    <string name="ovie_pocket">ovie Pocket</string>
    <string name="forget_password">Forget Password?</string>
    <string name="no_rating">You Didn\'t Rate</string>

</resources>
