<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="@dimen/margin_10"
    android:background="@drawable/card_view_properties"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/reset_password"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_forget_pass_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_30"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/hint_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:textColor="@color/material_color_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_forget_pass_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_40"
            android:background="@drawable/btn_ripple_accent_color"
            android:text="@string/cancel_in_forget_pass"
            android:textAllCaps="false"
            android:textColor="@color/material_color_white"
            android:textSize="@dimen/size_13sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_forget_pass_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:background="@drawable/btn_ripple_accent_color"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/material_color_white"
            android:textSize="@dimen/size_13sp"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


</LinearLayout>