<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_Title"
        android:textAlignment="center"
        android:textColor="@color/material_color_white"
        android:textSize="@dimen/size_14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/rate_us_dialog_rating_bar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="@integer/google_play_services_version"
            android:theme="@style/RatingBar" />

        <TextView
            android:id="@+id/rate_us_dialog_rating_in_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textColor="#ffff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/people_who_rated_us"
        android:textAlignment="center"
        android:textColor="@color/material_color_white"
        android:textSize="@dimen/size_14sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

</LinearLayout>